force-app/main/default/objects/vlocity_ins__InsuranceClaimReport__c/fields/vlocity_ins__ClaimId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimId__c</fullName>
    <label>Claim</label>
    <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
    <relationshipLabel>Claim Reports</relationshipLabel>
    <relationshipName>Claim_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>