force-app/main/default/objects/vlocity_ins__InsuranceClaimReport__c/fields/vlocity_ins__ReportDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReportDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>